# openalplusplus

./: CMakeLists.txt
include/openalpp/: audiobase.h  sounddata.h
src/: CMakeLists.txt  audiobase.cpp  audioenvironment.cpp  groupsource.cpp  netstream.cpp  netupdater.cpp  sample.cpp  source.cpp
